# argloc

./: Cargo.toml  README.md  justfile
benches/: hello_bench.rs
examples/: boundary_recovery.rs  double_pole.rs  poles_reciprocal_quadratic.rs  quadratic.rs  rational_function.rs  roots_of_unity.rs
src/: argument.rs  cell.rs  config.rs  error.rs  function.rs  lib.rs  localisation.rs  oracle.rs  output.rs  subdivision.rs
tests/: api.rs  boundary_recovery.rs
